workspace-sf/force-app/main/default/objects/CopiaEmail__mdt/CopiaEmail__mdt.object-meta.xml
<CustomObject>
    <label>Cópia Email</label>
    <pluralLabel>Cópias Emails</pluralLabel>
</CustomObject>