workspace-sf/force-app/main/default/objects/CopiaEmail__mdt/fields/Template__c.field-meta.xml
<CustomField>
    <fullName>Template__c</fullName>
    <label>Template</label>
    <length>255</length>
    <type>Text</type>
</CustomField>