workspace-sf/force-app/main/default/objects/CopiaEmail__mdt/listViews/Default.listView-meta.xml
<ListView>
    <fullName>Default</fullName>
    <columns>Template__c</columns>
    <columns>Email__c</columns>
    <columns>Ativo__c</columns>
    <filterScope>Everything</filterScope>
    <label>Default</label>
</ListView>